--- a/app/assets/css/melody_features.css
+++ b/app/assets/css/melody_features.css
@@ -191,8 +191,8 @@ body {
 
 .return-button {
     position: fixed;
-    bottom: 20px;
-    left: 20px;
+    top: 20px;
+    right: 20px;
     padding: 20px;
     background-color: #333;
     color: white;
